{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 99,
  "lineage": "08d78e1f-e4f9-35fc-bf3a-c2a02cf3bb7e",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:212646661744:vpc/vpc-0604d0a07752732f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ed82c06d4a3d05d9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bcf4be13b37499f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0604d0a07752732f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f239ac9e7367455",
            "owner_id": "212646661744"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:loadbalancer/app/webservers-prod/b4994a601f45af89",
            "arn_suffix": "app/webservers-prod/b4994a601f45af89",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-prod-2084028110.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:212646661744:loadbalancer/app/webservers-prod/b4994a601f45af89",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-prod",
            "security_groups": [
              "sg-09474a26d94188ec2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d76fff1622e8aa7"
              },
              {
                "subnet_id": "subnet-05f21c1f58f3ed1c9"
              },
              {
                "subnet_id": "subnet-0e94372e7def8301a"
              }
            ],
            "subnets": [
              "subnet-05d76fff1622e8aa7",
              "subnet-05f21c1f58f3ed1c9",
              "subnet-0e94372e7def8301a"
            ],
            "vpc_id": "vpc-0604d0a07752732f7",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:listener/app/webservers-prod/b4994a601f45af89/06429f77eaf43584",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:212646661744:listener/app/webservers-prod/b4994a601f45af89/06429f77eaf43584",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:loadbalancer/app/webservers-prod/b4994a601f45af89",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:targetgroup/webservers-prod/05fb773b3d3d8269",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:listener-rule/app/webservers-prod/b4994a601f45af89/06429f77eaf43584/ac6012bae10f7f78",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:212646661744:listener-rule/app/webservers-prod/b4994a601f45af89/06429f77eaf43584/ac6012bae10f7f78",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:listener/app/webservers-prod/b4994a601f45af89/06429f77eaf43584",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_lb_listener.http",
            "module.webserver_cluster.aws_lb_target_group.asg",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnets.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:212646661744:targetgroup/webservers-prod/05fb773b3d3d8269",
            "arn_suffix": "targetgroup/webservers-prod/05fb773b3d3d8269",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:212646661744:targetgroup/webservers-prod/05fb773b3d3d8269",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webservers-prod",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0604d0a07752732f7"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:212646661744:security-group/sg-09474a26d94188ec2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09474a26d94188ec2",
            "ingress": [],
            "name": "webservers-prod-alb",
            "name_prefix": "",
            "owner_id": "212646661744",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0604d0a07752732f7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:212646661744:security-group/sg-09f1188189ebc9674",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09f1188189ebc9674",
            "ingress": [],
            "name": "webservers-prod-instance",
            "name_prefix": "",
            "owner_id": "212646661744",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0604d0a07752732f7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_alb_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1785018337",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09474a26d94188ec2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_instance_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1241070149",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09f1188189ebc9674",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_alb_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3016322378",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09474a26d94188ec2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_instance_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-282879504",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f1188189ebc9674",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_instance_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2946605411",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f1188189ebc9674",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}